--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
-    <title>COIN CONVERTER</title>
+    <title>Coin Converter</title>
   </head>
   <body>
     <div id="root"></div>
